Added Landing Page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo File</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="/images/logo.png">
+  <link rel="stylesheet" href="./style.css">
+  <title>Juris</title>
 </head>
 <body>
-    
-    <h1>This is Kushal</h1>
+  <header class="header-container">
+    <div class="container-nav">
+      <nav>
+        <div class="juris-head">
+          <img src="./Images/logo.png" alt="Logo">
+          <a href="index.html">JURIS</a>
+          
+        </div>
+        <div class="nav-items">
+          <ul>
+            <li class="nav-item">
+              <a href="#features">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#About">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#Services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#Why-us">Why us?</a>
+            </li>
+            </li>
+            <li class="nav-item">
+              <a href="#Contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="main-container">
+      <h2>Welcome to <span class="main-span">Juris</span>, your trusted partner in legal services</h2>
+      <p>Our team of experienced attorneys provides comprehensive solutions tailored to your needs.
+        From corporate law to family law, we deliver results for individuals and businesses.
+        Trust us for personalized attention and effective representation.
+      </p>
+      <button class="consult-btn">FREE CONSULTATION</button>
+    </div>
+  </header>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="./Images/logo.png" alt="Logo">
+          <h3>JURIS</h3>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-info">
+        <p>&copy; 2023 Your Law Firm. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  
 </body>
 </html>
