--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="footer-info">
-        <p>&copy; 2023 Your Law Firm. All rights reserved.</p>
+        <p>&copy; 2023 Juris Law Firm. All rights reserved.</p>
       </div>
     </div>
   </footer>
